--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "cheerio": "^1.0.0-rc.2",
     "koa": "^2.6.2",
+    "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "superagent": "^4.0.0"
   }
